Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8283672 | 8-pool | Yi Yang | P3 | Closed | Rejected |
Running Java 9(build 1.9.0-ea-b48) on Linux-x64 with following options cause Java to print crash report:
java -XX:+UnlockDiagnosticVMOptions -XX:-UnrollLimitCheck
Got following output:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f8d7f0525be, pid=23628, tid=140245277476608
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b48) (build 1.9.0-ea-b48)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-b48 mixed mode linux-amd64 compressed oops)
# Problematic frame:
# V [libjvm.so+0x78b5be] PhaseIdealLoop::build_loop_late_post(Node*)+0x13e
#
# Core dump written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c" (or dumping to /home/dmitry/bundles/jdk9/b48/bin/core.23628)
#
# An error report file with more information is saved as:
# /home/dmitry/bundles/jdk9/b48/bin/hs_err_pid23628.log
......
java -version:
java version "1.9.0-ea"
Java(TM) SE Runtime Environment (build 1.9.0-ea-b48)
Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-ea-b48, mixed mode)
java -XX:+UnlockDiagnosticVMOptions -XX:-UnrollLimitCheck
Got following output:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x00007f8d7f0525be, pid=23628, tid=140245277476608
#
# JRE version: Java(TM) SE Runtime Environment (9.0-b48) (build 1.9.0-ea-b48)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (1.9.0-ea-b48 mixed mode linux-amd64 compressed oops)
# Problematic frame:
# V [libjvm.so+0x78b5be] PhaseIdealLoop::build_loop_late_post(Node*)+0x13e
#
# Core dump written. Default location: Core dumps may be processed with "/usr/share/apport/apport %p %s %c" (or dumping to /home/dmitry/bundles/jdk9/b48/bin/core.23628)
#
# An error report file with more information is saved as:
# /home/dmitry/bundles/jdk9/b48/bin/hs_err_pid23628.log
......
java -version:
java version "1.9.0-ea"
Java(TM) SE Runtime Environment (build 1.9.0-ea-b48)
Java HotSpot(TM) 64-Bit Server VM (build 1.9.0-ea-b48, mixed mode)
- backported by
-
JDK-8283672 Cleanup: Remove some unused flags/code in loop optimizations
-
- Closed
-
- relates to
-
JDK-8159715 Fix for 8072422 is incorrect
-
- Resolved
-
-
JDK-5091921 Sign flip issues in loop optimizer
-
- Closed
-
-
JDK-8283745 C2: JVM crashed with -XX:-UnrollLimitCheck
-
- Closed
-
- links to
-
Review openjdk/jdk8u-dev/22