8072422: Cleanup: Remove some unused flags/code in loop optimizations

Remove unused flags, change test using them.

Reviewed-by: kvn, twisti